--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -71,11 +71,10 @@ jobs:
         run: |
           export NEXT_PUBLIC_IS_STATIC=true
           ${{ steps.detect-package-manager.outputs.runner }} next build
-          ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: build
 
   # Deployment job
   deploy:
